initial commit of angular2 changes

--- a/ng2-ui/src/app/app.component.html
+++ b/ng2-ui/src/app/app.component.html
@@ -1,3 +1,14 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
+        <blockquote>{{title}}</blockquote>
+		</div>
+	</div>
+
+  <app-eurekaservice  (reloadEventLog)="getEvents($event)"></app-eurekaservice>
+
+  <app-eventlog></app-eventlog>
+
+</div>
+
+
