continued work in converting to use angular2

--- a/ng2-ui/src/app/app.component.html
+++ b/ng2-ui/src/app/app.component.html
@@ -1,13 +1,12 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
-        <blockquote>{{title}}</blockquote>
-		</div>
-	</div>
+      <p><!-- LEFT EMPTY SO UI WOULD APPEAR THE SAME AS ORIGINAL --></p>
+      <blockquote>{{title}}</blockquote>
+    </div>
+  </div>
 
-  <app-eurekaservice  (reloadEventLog)="getEvents($event)"></app-eurekaservice>
-
-  <app-eventlog></app-eventlog>
+  <app-eurekaservice></app-eurekaservice>
 
 </div>
 
