--- a/ng2-ui/src/app/eurekaservice/eurekaservice.component.html
+++ b/ng2-ui/src/app/eurekaservice/eurekaservice.component.html
@@ -1,4 +1,24 @@
 <div class="row">
+  <div class="col-md-6">
+    <h1>Applications/Services</h1>
+    <ol>
+      <li *ngFor="let eurekaApplication of eurekaApplications">{{eurekaApplication.name}}
+        <ul>
+          <li *ngFor="let eurekaService of eurekaApplication.instance">{{eurekaService.app}} <em>{{eurekaService.instanceId}}</em></li>
+        </ul>
+      </li>
+    </ol>
+  </div>
+
+  <div class="col-md-6">
+    <h1>Events</h1>
+  </div>
+
+</div>
+
+<hr>
+
+<div class="row">
   <!-- LIST -->
   <div id="actions" class="col-md-12">
     <form id="actions" class="form-inline">
