--- a/ng2-ui/src/app/app.component.html
+++ b/ng2-ui/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-12">
-      <p><!-- LEFT EMPTY SO UI WOULD APPEAR THE SAME AS ORIGINAL --></p>
-      <blockquote>{{title}}</blockquote>
+    <div class="col-xs-12">
+      <img class="img-thumbnail pull-left" style="min-width:9em; max-width: 13em; margin-right:1em" src="./assets/TroubleMakerLogoFull.png">
+      <h3 style="margin-top:1.7em;">{{title}}</h3>
     </div>
   </div>
 
