--- a/ng2-ui/src/app/eventlog/eventlog.component.css
+++ b/ng2-ui/src/app/eventlog/eventlog.component.css
@@ -1,3 +1,4 @@
+/*
 .table th.created {
     width: 20%;
 }
@@ -6,4 +7,11 @@
 }
 .table th.description {
     width: 65%;
+}
+*/
+
+/* For small screen */
+
+.row.eventlog:nth-child(odd){
+  background-color: #eaeaea;
 }
