--- a/ng2-ui/src/app/eventlog/eventlog.component.html
+++ b/ng2-ui/src/app/eventlog/eventlog.component.html
@@ -3,8 +3,20 @@
     <h3 id="panel-title" class="panel-title">Event Log</h3>
   </div>
 
-  <div id="events" class="panel-body">
-    <table class="table">
+  <div id="eventlog" class="panel-body">
+    <div class="row" style="border-bottom: 1px solid #000;">
+      <div class="col-xs-4" style="font-weight:bold;">Date</div>
+      <div class="col-xs-4" style="font-weight:bold;">Action</div>
+      <div class="col-xs-4" style="font-weight:bold;">Description</div>
+    </div>
+
+    <div class="row" *ngFor="let event of eventLog"  style="margin-bottom: 1em; border-bottom: 1px solid #ccc;">
+      <div class="col-xs-4">{{event.created | date: 'short'}}</div>
+      <div class="col-xs-4">{{event.action}}</div>
+      <div class="col-xs-4">{{event.description}}</div>
+    </div>
+
+    <!--<table class="table">
       <tbody>
         <tr>
           <th class="created">Date</th>
@@ -17,6 +29,6 @@
           <td id="{{event.id}}-description">{{event.description}}</td>
         </tr>
       </tbody>
-    </table>
+    </table>-->
   </div>	 	
 </div>
