made styling adjustments

--- a/ng2-ui/src/app/app.component.html
+++ b/ng2-ui/src/app/app.component.html
@@ -1,13 +1,11 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12">
-      <img class="img-thumbnail pull-left" style="min-width:9em; max-width: 13em; margin-right:1em" src="./assets/TroubleMakerLogoFull.png">
-      <h3 style="margin-top:1.7em;">{{title}}</h3>
+      <img class="img-thumbnail pull-left" src="./assets/TroubleMakerLogoFull.png">
+      <h3>{{title}}</h3>
     </div>
   </div>
 
   <app-eurekaservice></app-eurekaservice>
 
 </div>
-
-
