--- a/ng2-ui/src/app/eventlog/eventlog.component.css
+++ b/ng2-ui/src/app/eventlog/eventlog.component.css
@@ -15,3 +15,7 @@
 .row.eventlog:nth-child(odd){
   background-color: #eaeaea;
 }
+
+.panel > .panel-heading {
+    background-color: rgb(220, 94, 33);
+}
