--- a/ng2-ui/src/app/settings/settings.component.html
+++ b/ng2-ui/src/app/settings/settings.component.html
@@ -7,7 +7,7 @@
     <div class="form-group">
       <h4>Access Token: {{accessToken}}</h4>  
       <h4>Load Timeout: 5 minutes </h4> 
-      <button id="done" class="btn" type="button" (click)="close()">Done</button> 
+      <button id="done" class="btn btn-primary" type="button" (click)="close()">Done</button> 
     </div>
   </div>	 	
 </div>
