--- a/ng2-ui/src/app/eurekaservice/eurekaservice.component.html
+++ b/ng2-ui/src/app/eurekaservice/eurekaservice.component.html
@@ -1,27 +1,34 @@
 <div class="row">
   <!--APPLICATIONS / SERVICES -->
   <div class="col-md-6">
-    <div class="panel panel-primary">
+    <div class="panel application panel-primary">
+
       <div class="panel-heading">
         <span id="settings" class="glyphicon glyphicon-cog pull-right" aria-hidden="false" (click)="showSettingsInfo()" title="View Settings"></span>
-        <h3 id="panel-title" class="panel-title">Applications/Services</h3>
+        <h3 id="panel-title" class="panel-title">Services ({{eurekaServices ? eurekaServices.length : '0'}})</h3>
       </div>
 
       <div class="panel-body">
-        <div *ngFor="let eurekaApplication of eurekaApplications">
-          <div class="bg-info text-center" style="font-weight:bold;">{{eurekaApplication.name}}</div>
+        <div class="panel service panel-primary" *ngFor="let eurekaService of eurekaServices">
+          <div class="panel-heading"  (click)="eurekaService.showBody = !eurekaService.showBody">
+            {{eurekaService.name | uppercase}} ({{eurekaService.instances.length}})
+            <span class="pull-right"><i class="glyphicon {{eurekaService.showBody ? ' glyphicon-chevron-up' : ' glyphicon-chevron-down'}}"></i></span>
+          </div>
 
-            <div class="row" *ngFor="let eurekaService of eurekaApplication.instances" style="margin-bottom: 1em;">
-              <div class="col-xs-2">{{eurekaService.instanceInfo.app}}</div>
-              <div class="col-xs-5">{{eurekaService.instanceInfo.instanceId}}</div>
-              <div class="col-xs-5 btn-toolbar text-right">
-                  <button id="kill" class="btn btn-xs btn-danger" type="button" (click)="kill(eurekaService.instanceInfo.instanceId)" title="Kill Service">K</button>
-                  <button id="load" class="btn btn-xs btn-primary" type="button" (click)="load(eurekaService.instanceInfo.instanceId)" title="Load Service">L</button>
-                  <button id="exception" class="btn btn-xs btn-warning" type="button" (click)="exception(eurekaService.instanceInfo.instanceId)" title="Exception Service">E</button>
-                  <button id="memory" class="btn btn-xs btn-info" type="button" (click)="memory(eurekaService.instanceInfo.instanceId)" title="Memory Service">M</button>
+          <div class="panel-body {{!eurekaService.showBody ? 'collapse' : ''}}">
+            <div class="row" *ngFor="let eurekaServiceInstance of eurekaService.instances" style="margin-bottom: 1em;">
+              <div class="col-xs-3">{{eurekaServiceInstance.instanceInfo.app}}</div>
+              <div class="col-xs-5">{{eurekaServiceInstance.instanceInfo.instanceId}}</div>
+              <div class="col-xs-4 btn-toolbar text-right">
+                  <button id="kill" class="btn btn-xs btn-danger" type="button" (click)="kill(eurekaServiceInstance.instanceInfo.instanceId)" title="Kill Service">K</button>
+                  <button id="load" class="btn btn-xs btn-primary" type="button" (click)="load(eurekaServiceInstance.instanceInfo.instanceId)" title="Load Service">L</button>
+                  <button id="exception" class="btn btn-xs btn-warning" type="button" (click)="exception(eurekaServiceInstance.instanceInfo.instanceId)" title="Exception Service">E</button>
+                  <button id="memory" class="btn btn-xs btn-info" type="button" (click)="memory(eurekaServiceInstance.instanceInfo.instanceId)" title="Memory Service">M</button>
               </div>
             </div>
+          </div>
         </div>
+
       </div>
     </div>
   </div>
