--- a/ng2-ui/src/app/eventlog/eventlog.component.html
+++ b/ng2-ui/src/app/eventlog/eventlog.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
-    <h3 id="panel-title" class="panel-title">Event Log</h3>
+    <h3 id="panel-title" class="panel-title">Event Log ({{eventLog ? eventLog.length : '0'}})</h3>
   </div>
 
   <div id="eventlog" class="panel-body">
