--- a/ng2-ui/src/app/eventlog/eventlog.component.html
+++ b/ng2-ui/src/app/eventlog/eventlog.component.html
@@ -4,13 +4,13 @@
   </div>
 
   <div id="eventlog" class="panel-body">
-    <div class="row" style="border-bottom: 1px solid #000;">
-      <div class="col-xs-4" style="font-weight:bold;">Date</div>
-      <div class="col-xs-4" style="font-weight:bold;">Action</div>
-      <div class="col-xs-4" style="font-weight:bold;">Description</div>
+    <div class="row header">
+      <div class="col-xs-4" >Date</div>
+      <div class="col-xs-4" >Action</div>
+      <div class="col-xs-4" >Description</div>
     </div>
 
-    <div class="row" *ngFor="let event of eventLog"  style="margin-bottom: 1em; border-bottom: 1px solid #ccc;">
+    <div class="row data" *ngFor="let event of eventLog">
       <div class="col-xs-4">{{event.created | date: 'short'}}</div>
       <div class="col-xs-4">{{event.action}}</div>
       <div class="col-xs-4">{{event.description}}</div>
