--- a/ng2-ui/src/app/eurekaservice/eurekaservice.component.html
+++ b/ng2-ui/src/app/eurekaservice/eurekaservice.component.html
@@ -10,14 +10,13 @@
 
       <div class="panel-body">
         <div class="panel service panel-primary" *ngFor="let eurekaService of eurekaServices">
+          
           <div class="panel-heading"  (click)="eurekaService.showBody = !eurekaService.showBody">
-            {{eurekaService.name | uppercase}} ({{eurekaService.instances.length}})
+            {{eurekaService.name | uppercase}} ({{eurekaService.instances ? eurekaService.instances.length : '0'}})
             <span class="pull-right"><i class="glyphicon {{eurekaService.showBody ? ' glyphicon-chevron-up' : ' glyphicon-chevron-down'}}"></i></span>
           </div>
 
-
           <div class="panel-body {{!eurekaService.showBody ? 'collapse' : ''}}">
-
             <div class="row data" *ngFor="let eurekaServiceInstance of eurekaService.instances">
               <div class="col-xs-3">{{eurekaServiceInstance.instanceInfo.app}}</div>
               <div class="col-xs-6">{{eurekaServiceInstance.instanceInfo.instanceId}}</div>
