--- a/ng2-ui/src/app/eventlog/eventlog.component.html
+++ b/ng2-ui/src/app/eventlog/eventlog.component.html
@@ -1,6 +1,7 @@
 <div class="panel panel-primary">
 
   <div class="panel-heading">
+    <span id="refreshEventLog" class="glyphicon glyphicon-refresh pull-left" aria-hidden="false" (click)="refreshData()" title="Refresh Event Log"></span>
     <h3 id="panel-title" class="panel-title">Event Log ({{eventLog ? eventLog.length : '0'}})</h3>
   </div>
 
