--- a/ng2-ui/src/app/app.component.html
+++ b/ng2-ui/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div class="container-fluid">
+
   <div class="row">
     <div class="col-xs-12">
       <img class="img-thumbnail pull-left" src="./assets/TroubleMakerLogoFull.png">
-      <h3>{{title}}</h3>
+      <h2 class="title">{{title}}</h2>
     </div>
   </div>
 
