--- a/ng2-ui/src/app/eurekaservice/eurekaservice.component.css
+++ b/ng2-ui/src/app/eurekaservice/eurekaservice.component.css
@@ -16,7 +16,12 @@
 }
 
 .panel.service > .panel-heading {
-    background-color: rgb(248, 219, 205);
+    /*background-color: rgb(248, 219, 205);*/
+    background-color: rgb(254, 237, 230);
     color: #000;
+}
+
+span.glyphicon-refresh {
+    margin-right: 1em;
 }
 
