--- a/ng2-ui/src/app/eventlog/eventlog.component.css
+++ b/ng2-ui/src/app/eventlog/eventlog.component.css
@@ -1,32 +1,23 @@
-/*
-.table th.created {
-    width: 20%;
-}
-.table th.action {
-    width: 15%;
-}
-.table th.description {
-    width: 65%;
-}
-*/
-
-/* For small screen */
-
 .row.header {
     border-bottom: 2px solid #000;
 }
 .row.header div {
     font-weight:bold;
 }
-.row.data {
-    margin-bottom: 1em; 
-    border-bottom: 1px solid #ccc;
-}
 
-.row.eventlog:nth-child(odd){
-  background-color: #eaeaea;
+.row.data {
+    padding-top: .5em; 
+    padding-bottom: .5em; 
+}
+/* ALTERNATE ROW COLOR */
+.row.data:nth-child(odd){
+  background-color: rgb(254, 237, 230);
 }
 
 .panel > .panel-heading {
     background-color: rgb(220, 94, 33);
+}
+
+span.glyphicon-refresh {
+    margin-right: 1em;
 }
