--- a/ng2-ui/src/app/settings/settings.component.css
+++ b/ng2-ui/src/app/settings/settings.component.css
@@ -1,3 +1,8 @@
 .panel > .panel-heading {
     background-color: rgb(220, 94, 33);
 }
+button#done {
+    background-color: rgb(254, 237, 230);
+    color: #000;
+    font-weight: bold;
+}
