--- a/ng2-ui/src/app/settings/settings.component.html
+++ b/ng2-ui/src/app/settings/settings.component.html
@@ -4,10 +4,8 @@
   </div>
 
 	<div id="events" class="panel-body">
-    <div class="form-group">
+      <button id="done" class="btn btn-primary pull-right" type="button" (click)="close()">Done</button> 
       <h4>Access Token: {{accessToken}}</h4>  
-      <h4>Load Timeout: 5 minutes </h4> 
-      <button id="done" class="btn btn-primary" type="button" (click)="close()">Done</button> 
-    </div>
+      <h4>Load Timeout: {{loadTimeoutMinutes}} minutes </h4> 
   </div>	 	
 </div>
