--- a/ng2-ui/src/app/app.component.html
+++ b/ng2-ui/src/app/app.component.html
@@ -7,6 +7,7 @@
         </div>
     </div>
 
-    <app-eurekaservice></app-eurekaservice>
+<!--     <app-eurekaservice></app-eurekaservice> -->
+<app-email></app-email>
 
 </div>
