interim commit - updated angular version

--- a/ng2-ui/src/app/app.component.html
+++ b/ng2-ui/src/app/app.component.html
@@ -7,7 +7,6 @@
         </div>
     </div>
 
-<!--     <app-eurekaservice></app-eurekaservice> -->
-<app-email></app-email>
+    <app-eurekaservice></app-eurekaservice>
 
 </div>
